# dmheap

./: .gitignore  CMakeLists.txt  Makefile  README.md  dmheap.dmr  manifest.dmm  test_aligned_bug.c  test_fix_verification  test_fix_verification.c
.github/workflows/: ci.yml  release.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_dmheap_module  test_dmheap_unit  test_simple
docs/: dmheap.md
include/: dmheap.h  dmheap_version.h.in
src/: dmheap.c
tests/: CMakeLists.txt  README.md  dmod_stubs.c  test_dmheap_module.c  test_dmheap_unit.c  test_minimal.c  test_simple.c
tools/memory/: CMakeLists.txt  README.md  memory.c  memory.dmr
tools/memory/docs/: memory.md
